--- a/css/style.css
+++ b/css/style.css
@@ -124,12 +124,51 @@
     --ocean-blue: #3C79D4;
 }
 
+/* Body*/
+
 body {
+    scroll-behavior: smooth;
+
     font-family: Roboto-Regular-woff, serif;
     color: var(--white);
+    box-sizing: border-box;
     margin: 0;
-    padding: 2.625rem 6.438rem;
-    background: var(--dark-purple);
+    padding: 0;
+
+    overflow: hidden;
+    position: relative;
+    background-color: var(--dark-purple);
+}
+
+.bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    pointer-events: none;
+    overflow: hidden;
+    object-fit: cover;
+    object-position: center;
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--white);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--dark-purple);
+    transition: background-color 1s ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    box-shadow: 0 0 0 0.2rem var(--white);
+    background-color: var(--white);
 }
 
 a {
@@ -140,7 +179,11 @@ a {
 /* Navigation */
 
 .nav{
+    position: fixed;
+    width: 100%;
+
     background: var(--dark-purple);
+    padding: 2.625rem 6.438rem;
 }
 
 .nav-navbar{
@@ -239,7 +282,7 @@ a {
 
     .nav-navbar-menu {
         position: absolute;
-        top: 8%;
+        top: 35%;
         left: 0;
         right: 0;
         background: var(--dark-purple);
@@ -268,3 +311,4 @@ a {
 }
 
 /* Header */
+
