--- a/css/style.css
+++ b/css/style.css
@@ -193,14 +193,14 @@ body {
     position: fixed;
     width: 100%;
     background: var(--dark-purple);
-    padding: 2.625rem 6.438rem;
+    padding: 3.7rem 6.438rem;
 }
 
 .nav-navbar{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 23.5rem;
+    gap: 27rem;
 }
 
 .nav-navbar-logo{
@@ -213,7 +213,7 @@ body {
     display: flex;
     align-items: center;
     list-style: none;
-    gap: 2rem;
+    gap: 4rem;
 }
 
 .nav-navbar-menu-container-item{
@@ -231,12 +231,10 @@ body {
     display: flex;
     align-items: center;
     cursor: pointer;
-    /*stroke: var(--gray-header);*/
-    gap: 2rem;
+    gap: 3.7rem;
 }
 
 .nav-navbar-icons:hover{
-    /*stroke: var(--white);*/
     transition: all 0.5s ease;
 }
 
@@ -323,19 +321,18 @@ body {
 /* Discover */
 
 .discover{
-    max-width: 94rem;
-    padding: 12.625rem 6.438rem;
+    max-width: 99rem;
+    padding: 14rem 0.1rem;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
-    gap: 2rem;
 }
 
 .discover-title,
 .discover-img{
-    flex: 1 1 30%;
+    flex: 1 1 auto;
     min-width: 300px;
 }
 
@@ -364,12 +361,14 @@ body {
 .discover-title{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .discover-title_main{
     font-family: LeagueSpartan-SemiBold-woff, serif;
-    font-size: 4.146rem;
+    font-size: 5.6rem;
+    line-height: 1.13;
+    letter-spacing: 0.2rem;
 }
 .discover-title_main_gradient{
     background: linear-gradient(to right, var(--pink), var(--blue-light));
@@ -380,30 +379,31 @@ body {
 }
 .discover-title_sub{
     font-family: Rajdhani-Regular-woff, serif;
-    font-size: 1.658rem;
+    font-size: 1.88rem;
+    line-height: 1.6;
 }
 
 .discover-title-form{
     display: flex;
     align-items: center;
-    gap: 1rem;
+    padding-top: 0.9rem;
+    gap: 2.6rem;
 }
 
 .discover-title-form_button{
     position: relative;
-    padding: 2px;
+    padding: 0.2rem;
     border: none;
     background: linear-gradient(
             to right,
             var(--light-pink), var(--ocean-blue)
-
     );
 
     clip-path: polygon(
-            25% 0%,
+            15% 0%,
             100% 0%,
             100% 75%,
-            75% 100%,
+            85% 100%,
             0% 100%,
             0% 25%
     );
@@ -427,14 +427,12 @@ body {
 .discover-title-form_button-container {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
-    padding: 0.75rem 2rem;
+    gap: 1.2rem;
+    padding: 1.25rem 2.7rem;
     font-family: Orbitron-Bold-woff, serif;
-    font-size: 1.25rem;
+    font-size: 1.45rem;
 
-
-
-    color: white;
+    color: var(--white);
     background: linear-gradient(
             to left,
             var(--pink), var(--purple), var(--blue),
@@ -444,10 +442,10 @@ body {
     background-position: right center;
 
     clip-path: polygon(
-            25% 0%,
+            15% 0%,
             100% 0%,
             100% 75%,
-            75% 100%,
+            85% 100%,
             0% 100%,
             0% 25%
     );
@@ -462,7 +460,8 @@ body {
 
 .discover-title-form_sub{
     font-family: Orbitron-Bold-woff, serif;
-    font-size: 1.25rem;
+    font-size: 1.28rem;
+    letter-spacing: 0.1rem;
     background: linear-gradient(to right, var(--blue-light), var(--pink));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -472,17 +471,19 @@ body {
 
 .discover-title-info{
     display: flex;
-    gap: 1rem;
+    gap: 4.7rem;
     align-items: center;
+    padding-top: 3.5rem;
 }
 .discover-title-info-container{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    gap: 0.4rem;
 }
 .discover-title-info-container_main{
     font-family: Aldrich-Regular-woff, serif;
-    font-size: 2.5rem;
+    font-size: 2.9rem;
 }
 .discover-title-info-container_sub{
     font-family: AlethiaNext-Light-woff, serif;
@@ -494,6 +495,8 @@ body {
     display: flex;
     position: relative;
     justify-content: center;
+    padding-top: 1rem;
+    padding-left: 1rem;
 }
 .discover-img-picture{
     min-width: 25.125rem;
